multiple.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ns1
  name: pod-1-1
  annotations:
    k8s.v1.cni.cncf.io/networks: ns1/net1,ns1/net2
    net1.ns1.ovn.kubernetes.io/logical_switch: net1
    net1.ns1.ovn.kubernetes.io/ip_address: 10.0.1.11
    net2.ns1.ovn.kubernetes.io/logical_switch: net2
    net2.ns1.ovn.kubernetes.io/ip_address: 172.17.0.11
spec:
  containers:
    - name: test-1-1
      image: nicolaka/netshoot:v0.13
      command: ["sleep", "infinity"]
