snat.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ns1
  name: pod-1-1
  annotations:
    ovn.kubernetes.io/logical_switch: "net1"
    ovn.kubernetes.io/ip_address: "10.0.1.10"
spec:
  containers:
    - name: test-1-1
      image: nicolaka/netshoot:v0.13
      command: ["sleep", "infinity"]
