test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ns1
  name: test-pod
  labels:
    app: test
  annotations:
    k8s.v1.cni.cncf.io/networks: ns1/net1
    net1.ns1.ovn.kubernetes.io/logical_switch: net1
    net1.ns1.ovn.kubernetes.io/ip_address: 10.0.1.10
spec:
  containers:
    - name: test
      image: nicolaka/netshoot:v0.13
      command: ["sleep", "infinity"]
